--- a/assets/custom/css/kitchen.css
+++ b/assets/custom/css/kitchen.css
@@ -1,3 +1,9 @@
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
 /* width */
 ::-webkit-scrollbar {
   width: 7px;
@@ -15,6 +21,7 @@
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
+  height: 20px !important;
   background: rgba(0, 0, 0, 0.1);
   border-top-left-radius: 3px;
   border-top-right-radius: 3px;
@@ -39,6 +46,7 @@
 }
 
 .sidebar-scroll::-webkit-scrollbar-thumb {
+  height: 20px !important;
   background: #242b30;
   width: 20px;
   border-radius: 10px;
