Notification fix, dispose history fix

--- a/assets/custom/css/kitchen.css
+++ b/assets/custom/css/kitchen.css
@@ -167,3 +167,6 @@ body #gritter-notice-wrapper .gritter-item-wrapper {
   width: 350px;
   margin: 10px 75px;
 }
+.notifications{
+  min-width: 360px;
+}
